# Perch

./: .gitignore  CLAUDE.md  GIT-WORKFLOW.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: perch-commander.md  perch-core.md  perch-qa.md  perch-tauri.md
docs/: requirements.md  screen-spec.md  test-spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vault.rs
src/components/: ContextMenu.tsx  DiscardModal.tsx  OnboardingModal.tsx  PromoteModal.tsx  SearchBar.tsx  SettingsModal.tsx
src/db/: db.ts  meta.test.ts  meta.ts  tabs.test.ts  tabs.ts
src/editor/: CodeMirrorEditor.tsx  highlight.ts  setup.ts  theme.ts
src/lib/: aiTags.test.ts  aiTags.ts  claude.test.ts  claude.ts  fontsize.test.ts  fontsize.ts  noteFile.test.ts  noteFile.ts  promote.test.ts  promote.ts  ruleTags.test.ts  ruleTags.ts  slug.test.ts  slug.ts  tabFilter.test.ts  tabFilter.ts  title.test.ts  title.ts  vaultFs.ts
src/styles/: app.css  tokens.css
src/test/: setup.ts
src/types/: tab.ts
tests/e2e/: amplify.spec.ts  appHelpers.ts  editor.spec.ts  filter.spec.ts  harness.ts  promote.spec.ts  related.spec.ts  restore.spec.ts  search.spec.ts  settings.spec.ts  tablist.spec.ts
