[package]
name = "perch"
version = "0.1.0"
description = "揮発しない賢いmi + Vault昇格 + AIあのあれ検索"
authors = ["Perch"]
edition = "2021"
rust-version = "1.77.2"

# main.rs と lib.rs 両方を持つ Tauri 2 標準構成。
# lib は mobile 対応や統合テストのために共有クレートとして切る。
[lib]
name = "perch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# 統合テストで実ファイル検証用の一時ディレクトリを作る（自動後始末）。
tempfile = "3"

[features]
# デフォルトでカスタムプロトコルを有効化（本番ビルド用）
custom-protocol = ["tauri/custom-protocol"]
